--- a/input.scss
+++ b/input.scss
@@ -97,7 +97,7 @@
     grid-template-columns: 13.3% 13.3% 13.3% 20% 10% 10% 10% 10%;
     grid-template-areas: 
     "sw1 sw2 sw3 info pa1 pa2 pa3 pa4"
-    " . input input input input input input .";
+    " input input input input input input input input";
     height:5%;
     color:#FFFFFF;
     text-align:center;
@@ -141,7 +141,9 @@
       border-radius: 5px;
       background-color:#0078DB;
       color:#FFFFFF;
-      font-size:2.7vh;
+      line-height:2vh;
+      text-align:center;
+      font-size: 2.7vh;
       font-weight:bold;
     } 
 
@@ -173,12 +175,11 @@
       -webkit-appearance: none;
     }
     input[type=range]::-webkit-slider-runnable-track{
-      width:95%;
-      height:2.0vh;
+      width:100%;
+      height:5vh;
       cursor:pointer;
       background:#48A3D9;
       border-radius:25px;
-      border:1px solid #0000A0;
     }
     input:hover::-webkit-slider-runnable-track{
       background-color:#aa39b5;
@@ -186,10 +187,11 @@
     input[type=range]::-webkit-slider-thumb{
       -webkit-appearance: none;
       border: none;
-      height: 16px;
-      width: 16px;
-      border-radius: 50%;
-      background: goldenrod;
+      height: 5vh;
+      width: 6vw;
+      padding-top: 20px;
+      border-radius: 20%;
+      background: yellow;
     }
     input[type=range]:focus {
       outline: none;
@@ -206,9 +208,6 @@
 
   #FlowInd {
     grid-area: FlowInd;
-    background-color: #0078DB;
-    border-radius: 2%;
-    box-shadow:2px 2px 12px 1px rgba(140,140,140,.5);
   }
 
   #PressInd {
@@ -227,7 +226,7 @@
   }
 
   #StatusInfo {
-    height: 15vh;
+    height: 10vh;
     width: 25vh;
     border: 2px solid #0088F8;
     background-color:#0078DB;
@@ -237,12 +236,10 @@
     align-self: center;
     justify-self: center;
     display: flex;
-    justify-content: center;
     align-items: center;
-    p{
-      font-size:4vh;
-      font-weight:bold;
-    }
+    justify-content: center;
+    font-size:3vh;
+    font-weight:bold;
   }
 
   .MenuButton{
@@ -316,7 +313,7 @@
 }
 
 @media only screen
-  and (min-device-width: 374px)
+  and (min-device-width: 320px)
   and (max-device-width: 576px){
   .grid-container {
     display: grid;
