--- a/output.css
+++ b/output.css
@@ -85,7 +85,7 @@
   grid-column: 2/5;
   display: grid;
   grid-template-columns: 13.3% 13.3% 13.3% 20% 10% 10% 10% 10%;
-  grid-template-areas: "sw1 sw2 sw3 info pa1 pa2 pa3 pa4" " . input input input input input input .";
+  grid-template-areas: "sw1 sw2 sw3 info pa1 pa2 pa3 pa4" " input input input input input input input input";
   height: 5%;
   color: #FFFFFF;
   text-align: center;
@@ -129,6 +129,8 @@
   border-radius: 5px;
   background-color: #0078DB;
   color: #FFFFFF;
+  line-height: 2vh;
+  text-align: center;
   font-size: 2.7vh;
   font-weight: bold;
 }
@@ -160,12 +162,11 @@
   -webkit-appearance: none;
 }
 .grid-container .SetFlowInfo input[type=range]::-webkit-slider-runnable-track {
-  width: 95%;
-  height: 2vh;
+  width: 100%;
+  height: 5vh;
   cursor: pointer;
   background: #48A3D9;
   border-radius: 25px;
-  border: 1px solid #0000A0;
 }
 .grid-container .SetFlowInfo input:hover::-webkit-slider-runnable-track {
   background-color: #aa39b5;
@@ -173,10 +174,11 @@
 .grid-container .SetFlowInfo input[type=range]::-webkit-slider-thumb {
   -webkit-appearance: none;
   border: none;
-  height: 16px;
-  width: 16px;
-  border-radius: 50%;
-  background: goldenrod;
+  height: 5vh;
+  width: 6vw;
+  padding-top: 20px;
+  border-radius: 20%;
+  background: yellow;
 }
 .grid-container .SetFlowInfo input[type=range]:focus {
   outline: none;
@@ -190,9 +192,6 @@
 }
 .grid-container #FlowInd {
   grid-area: FlowInd;
-  background-color: #0078DB;
-  border-radius: 2%;
-  box-shadow: 2px 2px 12px 1px rgba(140, 140, 140, 0.5);
 }
 .grid-container #PressInd {
   grid-area: PressInd;
@@ -207,7 +206,7 @@
   justify-self: center;
 }
 .grid-container #StatusInfo {
-  height: 15vh;
+  height: 10vh;
   width: 25vh;
   border: 2px solid #0088F8;
   background-color: #0078DB;
@@ -217,11 +216,9 @@
   align-self: center;
   justify-self: center;
   display: flex;
-  justify-content: center;
   align-items: center;
-}
-.grid-container #StatusInfo p {
-  font-size: 4vh;
+  justify-content: center;
+  font-size: 3vh;
   font-weight: bold;
 }
 .grid-container .MenuButton {
@@ -290,7 +287,7 @@
   align-items: center;
 }
 
-@media only screen and (min-device-width: 374px) and (max-device-width: 576px) {
+@media only screen and (min-device-width: 320px) and (max-device-width: 576px) {
   .grid-container {
     display: grid;
     grid-template-columns: 5% repeat(3, 30%) 5%;
